scrape reading links from menu

--- a/util/prep_dataset.ipynb
+++ b/util/prep_dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,16 +742,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scrape reading exercise given url"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "SCRAPER = cloudscraper.create_scraper()\n",
-    "HEADING_KEYWORDS = (\"Reading Passage\", \"Answer Key\", \"Kanji Lesson\", \"New words\")\n",
     "\n",
     "def request_html(url) -> BeautifulSoup:\n",
-    "    SCRAPER.get(url)\n",
+    "    response = SCRAPER.get(url)\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    return soup\n",
     "\n",
@@ -761,7 +767,8 @@
     "    content_nodes = [p for p in passage_div.children if p.name == 'p']\n",
     "\n",
     "    # get the heading nodes\n",
-    "    passages_heading_leaf = soup.find_all(string=[re.compile(f\".*{kw}.*\") for kw in HEADING_KEYWORDS])\n",
+    "    keeywords = (\"Reading Passage\", \"Answer Key\", \"Kanji Lesson\", \"New words\")\n",
+    "    passages_heading_leaf = soup.find_all(string=[re.compile(f\".*{kw}.*\") for kw in keeywords])\n",
     "    passages_heading_nodes = [l.find_parents(\"p\")[0] for l in passages_heading_leaf]\n",
     "\n",
     "    # classify the texts according to heading\n",
@@ -835,6 +842,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**usage example**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -901,6 +915,78 @@
     "sections = extract_reading_exercise(soup)\n",
     "exercises = sections_to_exercises(sections)\n",
     "exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scrape links to reading exercise from menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def request_html(url) -> BeautifulSoup:\n",
+    "    scraper = cloudscraper.create_scraper()\n",
+    "    response = scraper.get(url)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    return soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'response' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m soup \u001b[39m=\u001b[39m request_html(\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mhttps://japanesetest4you.com/category/jlpt-n3/jlpt-n3-reading-test/\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m soup\n",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m, in \u001b[0;36mrequest_html\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m      2\u001b[0m scraper \u001b[39m=\u001b[39m cloudscraper\u001b[39m.\u001b[39mcreate_scraper()\n\u001b[1;32m      3\u001b[0m scraper\u001b[39m.\u001b[39mget(url)\n\u001b[0;32m----> 4\u001b[0m soup \u001b[39m=\u001b[39m BeautifulSoup(response\u001b[39m.\u001b[39mtext, \u001b[39m'\u001b[39m\u001b[39mhtml.parser\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[39mreturn\u001b[39;00m soup\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'response' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "soup = request_html(r\"https://japanesetest4you.com/category/jlpt-n3/jlpt-n3-reading-test/\")\n",
+    "soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "links_leaf =soup.find_all(\"div\", class_=\"readmore\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_leaf"
    ]
   },
   {
