reformat, + extract link to menu

--- a/util/prepare_dataset.ipynb
+++ b/util/prepare_dataset.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scrape links to reading exercise menu from homepage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_reading_exercise_menu_urls(soup: BeautifulSoup):\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    -   soup: homepage https://japanesetest4you.com/\n",
+    "\n",
+    "    Output:\n",
+    "    -   [\n",
+    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-1/#more-703',\n",
+    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-2/#more-705',\n",
+    "        ]\n",
+    "    \"\"\"\n",
+    "    links_tag =soup.find_all(\"a\", string=re.compile(r\".*READING TEST.*\"))\n",
+    "    links_to_menu = sorted([l.attrs[\"href\"] for l in links_tag])\n",
+    "    return links_to_menu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**usage example**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = request_html(WEBSITE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://japanesetest4you.com/category/jlpt-n1/jlpt-n1-reading-test/',\n",
+       " 'https://japanesetest4you.com/category/jlpt-n2/jlpt-n2-reading-test/',\n",
+       " 'https://japanesetest4you.com/category/jlpt-n3/jlpt-n3-reading-test/',\n",
+       " 'https://japanesetest4you.com/category/jlpt-n4/jlpt-n4-reading-test/',\n",
+       " 'https://japanesetest4you.com/category/jlpt-n5/jlpt-n5-reading-tests/']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_to_menu = extract_reading_exercise_menu_urls(soup)\n",
+    "links_to_menu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scrape links to reading exercise from menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_reading_exercise_urls(soup: BeautifulSoup):\n",
+    "    \"\"\"\n",
+    "    Input:\n",
+    "    -   soup: from reading test menu in each jlpt level\n",
+    "\n",
+    "    Output:\n",
+    "    -   [\n",
+    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-1/#more-703',\n",
+    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-2/#more-705',\n",
+    "        ]\n",
+    "    \"\"\"\n",
+    "    links_div =soup.find_all(\"div\", class_=\"readmore\")\n",
+    "    links_to_exercise = [l.a.attrs[\"href\"] for l in links_div]\n",
+    "    return links_to_exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**usage example**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = request_html(r\"https://japanesetest4you.com/category/jlpt-n3/jlpt-n3-reading-test/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-1/#more-703',\n",
+       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-2/#more-705',\n",
+       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-3/#more-708']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_to_exercise = extract_reading_exercise_urls(soup)\n",
+    "links_to_exercise[:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Scrape reading exercise given url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +221,7 @@
     "    passage_div = soup.find_all(\"div\",class_= \"entry clearfix\")[0]\n",
     "    content_nodes = [p for p in passage_div.children if p.name == 'p']\n",
     "\n",
-    "    # get the heading nodes (case-insensitive)\n",
+    "    # get the heading nodes\n",
     "    passages_heading_nodes = [n for n in content_nodes if n.strong]\n",
     "\n",
     "    # classify the texts according to heading\n",
@@ -150,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +331,7 @@
        "    'options': [' 本を読みます。', ' ノートを借ります。', ' ノートを返します。', ' 本とノートを使います。']}]}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,36 +346,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scrape links to reading exercise from menu"
+    "### Split Japanese text into sentences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCRAPER = cloudscraper.create_scraper()\n",
-    "\n",
-    "def request_html(url) -> BeautifulSoup:\n",
-    "    response = SCRAPER.get(url)\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    return soup\n",
-    "\n",
-    "def extract_reading_exercise_urls(soup: BeautifulSoup):\n",
-    "    \"\"\"\n",
-    "    Input:\n",
-    "    -   soup: from reading test menu in each jlpt level\n",
-    "\n",
-    "    Output:\n",
-    "    -   [\n",
-    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-1/#more-703',\n",
-    "            'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-2/#more-705',\n",
-    "        ]\n",
-    "    \"\"\"\n",
-    "    links_leaf =soup.find_all(\"div\", class_=\"readmore\")\n",
-    "    links_to_exercise = [l.a.attrs[\"href\"] for l in links_leaf]\n",
-    "    return links_to_exercise"
+    "sentence_tokenizer = SentenceTokenizer()\n",
+    "def split_to_sentences(text):\n",
+    "    sentences = sentence_tokenizer.tokenize(text)\n",
+    "    return sentences"
    ]
   },
   {
@@ -249,52 +370,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-1/#more-703',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-2/#more-705',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-3/#more-708',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-4/#more-712',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-5/#more-715',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-6/#more-717',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-07/#more-2138',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-08/#more-2140',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-09/#more-2218',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-10/#more-2220',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-11/#more-2452',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-12/#more-2454',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-13/#more-2747',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-14/#more-2749',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-15/#more-4291',\n",
-       " 'https://japanesetest4you.com/japanese-language-proficiency-test-jlpt-n3-reading-exercise-16/#more-4293']"
+       "['軍人役を任されてまず思ったことは、外見的に強く見せなければならないということでした。',\n",
+       " 'ユ・シジンは特殊戦司令部チーム長という役どころですから、まずは筋肉をつけるしかありません。',\n",
+       " 'また、強靭な印象を与えるために、ダイエットも並行していました。',\n",
+       " 'ロープ降下訓練、アクション訓練、射撃訓練、アルファチームとしての集団戦の訓練などさまざまな訓練を行いました。',\n",
+       " 'ナイフを使用して戦うため、剣術訓練を一番熱心にやりましたね。']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup = request_html(r\"https://japanesetest4you.com/category/jlpt-n3/jlpt-n3-reading-test/\")\n",
-    "links_to_exercise = extract_reading_exercise_urls(soup)\n",
-    "links_to_exercise"
+    "text = \"軍人役を任されてまず思ったことは、外見的に強く見せなければならないということでした。ユ・シジンは特殊戦司令部チーム長という役どころですから、まずは筋肉をつけるしかありません。また、強靭な印象を与えるために、ダイエットも並行していました。ロープ降下訓練、アクション訓練、射撃訓練、アルファチームとしての集団戦の訓練などさまざまな訓練を行いました。ナイフを使用して戦うため、剣術訓練を一番熱心にやりましたね。\"\n",
+    "split_to_sentences(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform list of exercises to sentence dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exercise_data_to_dataframe(exercise_data):\n",
+    "    \"\"\"\n",
+    "    Input: \n",
+    "    - data: list of exercises\n",
+    "        [\n",
+    "            {\n",
+    "                'Reading Passage 1': {\n",
+    "                    'passage': [\n",
+    "                        '学生: すみません。この本をかりたいです。',\n",
+    "                        'としょかんの人: この学校の学生ですか。',\n",
+    "                    ],\n",
+    "                    'questions': [\n",
+    "                        {\n",
+    "                            'question': '1. [_______] には何を入れますか。',\n",
+    "                            'options': [' 本は２９日、ざっしは２２日です。',' 本は２２日、ざっしは２９日です。',]\n",
+    "                        },\n",
+    "                    ]\n",
+    "                },\n",
+    "            }\n",
+    "        ]\n",
+    "\n",
+    "    Output:\n",
+    "    - dataframe of sentences in each level\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    sentences_dataset = {\"N3\": []}\n",
+    "    texts = []\n",
+    "    for exercise in exercise_data:\n",
+    "        for name, reading in exercise.items():\n",
+    "            # only passage and options are necessary\n",
+    "            texts += reading[\"passage\"]\n",
+    "            # for problem in reading[\"questions\"]:\n",
+    "            #     texts += problem[\"options\"]\n",
+    "                \n",
+    "    # split all texts into sentences\n",
+    "    for t in texts:\n",
+    "        sentences_dataset[\"N3\"] += split_to_sentences(t)\n",
+    "    df = pd.DataFrame(sentences_dataset)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Merge everything together**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for request: 0.79s\n",
-      "Time for extract: 0.04s\n",
+      "Time for request: 0.68s\n",
+      "Time for extract: 0.03s\n",
       "Time for to_exercise: 0.00s\n"
      ]
     }
@@ -329,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1263,7 @@
        "     'options': [' わけだった', ' わけがなかった', ' わけではなかった', ' わけにはいかなかった']}]}}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,59 +1274,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split Japanese text into sentences"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence_tokenizer = SentenceTokenizer()\n",
-    "def split_to_sentences(text):\n",
-    "    sentences = sentence_tokenizer.tokenize(text)\n",
-    "    return sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['軍人役を任されてまず思ったことは、外見的に強く見せなければならないということでした。',\n",
-       " 'ユ・シジンは特殊戦司令部チーム長という役どころですから、まずは筋肉をつけるしかありません。',\n",
-       " 'また、強靭な印象を与えるために、ダイエットも並行していました。',\n",
-       " 'ロープ降下訓練、アクション訓練、射撃訓練、アルファチームとしての集団戦の訓練などさまざまな訓練を行いました。',\n",
-       " 'ナイフを使用して戦うため、剣術訓練を一番熱心にやりましたね。']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"軍人役を任されてまず思ったことは、外見的に強く見せなければならないということでした。ユ・シジンは特殊戦司令部チーム長という役どころですから、まずは筋肉をつけるしかありません。また、強靭な印象を与えるために、ダイエットも並行していました。ロープ降下訓練、アクション訓練、射撃訓練、アルファチームとしての集団戦の訓練などさまざまな訓練を行いました。ナイフを使用して戦うため、剣術訓練を一番熱心にやりましたね。\"\n",
-    "split_to_sentences(text)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transform list of exercises to sentence dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1250,51 +1369,19 @@
        "[564 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Input: \n",
-    "- data: list of exercises\n",
-    "    [\n",
-    "        {\n",
-    "            'Reading Passage 1': {\n",
-    "                'passage': [\n",
-    "                    '学生: すみません。この本をかりたいです。',\n",
-    "                    'としょかんの人: この学校の学生ですか。',\n",
-    "                ],\n",
-    "                'questions': [\n",
-    "                    {\n",
-    "                        'question': '1. [_______] には何を入れますか。',\n",
-    "                        'options': [' 本は２９日、ざっしは２２日です。',' 本は２２日、ざっしは２９日です。',]\n",
-    "                    },\n",
-    "                ]\n",
-    "            },\n",
-    "        }\n",
-    "    ]\n",
-    "\"\"\"\n",
-    "sentences_dataset = {\"N3\": []}\n",
-    "texts = []\n",
-    "for exercise in exercise_data:\n",
-    "    for name, reading in exercise.items():\n",
-    "        # only passage and options are necessary\n",
-    "        texts += reading[\"passage\"]\n",
-    "        for problem in reading[\"questions\"]:\n",
-    "            texts += problem[\"options\"]\n",
-    "            \n",
-    "# split all texts into sentences\n",
-    "for t in texts:\n",
-    "    sentences_dataset[\"N3\"] += split_to_sentences(t)\n",
-    "df = pd.DataFrame(sentences_dataset)\n",
+    "df = exercise_data_to_dataframe(exercise_data)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1303,13 +1390,13 @@
        "'さて、この一年を振り返り、下記により忘年会を開催いたします。'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[2][\"N3\"]"
+    "df[\"N3\"][2]"
    ]
   },
   {
@@ -1336,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
