--- a/util/prepare_dataset.ipynb
+++ b/util/prepare_dataset.ipynb
@@ -412,23 +412,7 @@
     "    - reading_data: list of exercises of each level\n",
     "        {\n",
     "            \"N1\": [\n",
-    "                {\n",
-    "                    \"Reading Passage 1\": {\n",
-    "                        \"passage\": [\n",
-    "                            \"学生: すみません。この本をかりたいです。\",\n",
-    "                            \"としょかんの人: この学校の学生ですか。\",\n",
-    "                        ],\n",
-    "                        \"problems\": [\n",
-    "                            {\n",
-    "                                \"question\": \"1. [_______] には何を入れますか。\",\n",
-    "                                \"options\": [\n",
-    "                                    \" 本は２９日、ざっしは２２日です。\",\n",
-    "                                    \" 本は２２日、ざっしは２９日です。\",\n",
-    "                                ],\n",
-    "                            },\n",
-    "                        ],\n",
-    "                    },\n",
-    "                }\n",
+    "                output of sections_to_exercises() ,\n",
     "            ],\n",
     "        }\n",
     "\n",
@@ -452,7 +436,6 @@
     "            sentences = split_to_sentences(text)\n",
     "            for sentence in sentences:\n",
     "                sentences_dataset.append((sentence, level))\n",
-    "\n",
     "\n",
     "    df = pd.DataFrame(sentences_dataset, columns=[\"Sentence\", \"Level\"])\n",
     "    return df"
