--- a/util/prepare_dataset.ipynb
+++ b/util/prepare_dataset.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
      "data": {
       "text/plain": [
        "{'reading passage 1': {'passage': ['きのうは友だちのいえへ行って、友だちがつくったりょうりを食べました。すこしからかったです。でも、とてもおいしかったです。わたしも友だちもたくさん食べました。また食べたいです。'],\n",
-       "  'questions': [{'question': '1. ただしいものはどれですか。',\n",
+       "  'problems': [{'question': '1. ただしいものはどれですか。',\n",
        "    'options': [' わたしはりょうりをつくりました。',\n",
        "     ' 友だちはりょうりがじょうずです。',\n",
        "     ' りょうりはおいしくありませんでした。',\n",
@@ -312,13 +312,13 @@
        " 'reading passage 2': {'passage': ['田中さんへ',\n",
        "   'おとといはどうもありがとう。雨がたくさん降りましたから、田中さんに傘を借りてよかったです。借りた傘はドアのところに置きます。それから昨日作ったお菓子も置きます。どうぞ食べてください。',\n",
        "   '９月１０日\\u3000午後７時\\u3000鈴木より'],\n",
-       "  'questions': [{'question': '2. 鈴木さんは９月１０日に何をしましたか。',\n",
+       "  'problems': [{'question': '2. 鈴木さんは９月１０日に何をしましたか。',\n",
        "    'options': [' お菓子を買いました。', ' 傘を借りました。', ' 傘を返しました。', ' お菓子を作りました。']}]},\n",
        " 'reading passage 3': {'passage': ['このたてものの中ではしずかにえを見てください。しゃしんをとらないでください。たばこもこまります。たばこは外ですってください。えを見ながら食べたり飲んだりしないでください。'],\n",
-       "  'questions': [{'question': '3. あなたはこのたてものの中で何をしますか。',\n",
+       "  'problems': [{'question': '3. あなたはこのたてものの中で何をしますか。',\n",
        "    'options': [' えを見ます。', ' たばこをすいます。', ' ごはんを食べます。', ' しゃしんをとります。']}]},\n",
        " 'reading passage 4': {'passage': ['けさ、山川さんは７時におきました。あさごはんを食べる前にシャワーをあびました。あさごはんを食べながらテレビを見ました。あさごはんを食べたあとで、新聞を読みました。それから会社へ行きました。'],\n",
-       "  'questions': [{'question': '4. ただしいものはどれですか。',\n",
+       "  'problems': [{'question': '4. ただしいものはどれですか。',\n",
        "    'options': [' あさごはんのあとでテレビを見ました。',\n",
        "     ' あさごはんをたべながら新聞を読みました。',\n",
        "     ' テレビを見る前にあさごはんを食べました。',\n",
@@ -327,7 +327,7 @@
        "   '今日は先に帰ります。リンさんに借りたノートは明日持ってきます。',\n",
        "   'それから私の本は、まだ使いませんから、どうぞゆっくり読んでください。',\n",
        "   'さくらより'],\n",
-       "  'questions': [{'question': '5. さくらさんは明日何をすると書いてありますか。',\n",
+       "  'problems': [{'question': '5. さくらさんは明日何をすると書いてありますか。',\n",
        "    'options': [' 本を読みます。', ' ノートを借ります。', ' ノートを返します。', ' 本とノートを使います。']}]}}"
       ]
      },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
     "        for text in texts:\n",
     "            sentences = split_to_sentences(text)\n",
     "            for sentence in sentences:\n",
-    "                sentences_dataset.append((sentence, level))\n",
+    "                sentences_dataset.append((sentence.strip(), level))\n",
     "\n",
     "    df = pd.DataFrame(sentences_dataset, columns=[\"Sentence\", \"Level\"])\n",
     "    return df"
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
        "      'options': [' わるい', ' たのしい', ' きたない', ' むずかしい']}]}}]}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2911,7 +2911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3017,7 +3017,7 @@
        "[3443 rows x 2 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3029,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
