--- a/train.ipynb
+++ b/train.ipynb
@@ -22,7 +22,7 @@
     "import numpy as np\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "from model import BERTClassification"
+    "from models.bert import BERTClassification"
    ]
   },
   {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,99 +105,21 @@
      "output_type": "stream",
      "text": [
       "Epoch [0/1000]\n",
-      "[Batch    1/216] Loss: 1.2500 Labels: [2, 4, 1, 3, 1, 2, 0, 3, 3, 2, 2, 1, 2, 4, 2, 3]\n",
-      "[Batch   51/216] Loss: 1.3261 Labels: [2, 2, 3, 0, 1, 2, 3, 4, 4, 2, 1, 3, 0, 2, 3, 3]\n",
-      "[Batch  101/216] Loss: 1.2542 Labels: [3, 0, 0, 3, 4, 2, 0, 2, 3, 2, 3, 3, 1, 0, 3, 4]\n",
-      "[Batch  151/216] Loss: 1.2620 Labels: [3, 1, 2, 2, 0, 2, 4, 0, 3, 2, 4, 1, 3, 3, 1, 2]\n",
-      "[Batch  201/216] Loss: 1.4521 Labels: [4, 2, 2, 3, 3, 3, 3, 1, 2, 2, 4, 4, 3, 0, 2, 3]\n",
-      "Total loss: 1.3230\n",
-      "Epoch [1/1000]\n",
-      "[Batch    1/216] Loss: 1.0162 Labels: [1, 2, 3, 3, 3, 2, 2, 4, 1, 2, 2, 2, 4, 3, 2, 3]\n",
-      "[Batch   51/216] Loss: 1.2939 Labels: [1, 4, 2, 2, 3, 4, 4, 1, 0, 4, 2, 4, 2, 3, 3, 2]\n",
-      "[Batch  101/216] Loss: 1.4404 Labels: [3, 2, 1, 0, 2, 2, 3, 0, 4, 4, 2, 2, 0, 4, 4, 2]\n",
-      "[Batch  151/216] Loss: 1.0762 Labels: [3, 3, 2, 2, 3, 2, 2, 3, 1, 1, 4, 2, 4, 2, 1, 1]\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
+      "[Batch    1/216] Loss: 1.6311 Labels: [1, 0, 4, 3, 4, 1, 4, 2, 2, 2, 2, 2, 0, 2, 3, 3]\n",
+      "[Batch   51/216] Loss: 1.8018 Labels: [0, 0, 0, 0, 1, 2, 3, 2, 0, 0, 2, 2, 4, 1, 2, 4]\n",
+      "[Batch  101/216] Loss: 1.5987 Labels: [1, 3, 3, 1, 3, 4, 2, 1, 3, 4, 1, 1, 3, 0, 2, 2]\n",
+      "[Batch  151/216] Loss: 2.0378 Labels: [1, 3, 4, 1, 4, 0, 2, 4, 0, 3, 4, 2, 1, 0, 4, 0]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3508, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_334591/1281947199.py\", line 8, in <module>\n",
-      "    inputs = tokenizer(sentences, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils_base.py\", line 2577, in __call__\n",
-      "    encodings = self._call_one(text=text, text_pair=text_pair, **all_kwargs)\n",
-      "                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils_base.py\", line 2663, in _call_one\n",
-      "    return self.batch_encode_plus(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils_base.py\", line 2854, in batch_encode_plus\n",
-      "    return self._batch_encode_plus(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils.py\", line 733, in _batch_encode_plus\n",
-      "    first_ids = get_input_ids(ids)\n",
-      "                ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils.py\", line 700, in get_input_ids\n",
-      "    tokens = self.tokenize(text, **kwargs)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils.py\", line 499, in tokenize\n",
-      "    str(t): t for t in self.all_special_tokens_extended if isinstance(t, AddedToken)\n",
-      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils_base.py\", line 1300, in all_special_tokens_extended\n",
-      "    set_attr = self.special_tokens_map_extended\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/transformers/tokenization_utils_base.py\", line -1, in special_tokens_map_extended\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2105, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1428, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1319, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1172, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1087, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 969, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"/home/cyrus/virtualenv/text/lib/python3.11/site-packages/executing/executing.py\", line 190, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     17\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m---> 19\u001b[0m total_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m batch_idx \u001b[39m%\u001b[39m \u001b[39m50\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     21\u001b[0m     \u001b[39mprint\u001b[39m(\n\u001b[1;32m     22\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m[Batch \u001b[39m\u001b[39m{\u001b[39;00mbatch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m:\u001b[39;00m\u001b[39m4d\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data_loader)\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     23\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m Loss: \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m.\u001b[39mitem()\u001b[39m/\u001b[39mBATCH_SIZE\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     24\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m Labels: \u001b[39m\u001b[39m{\u001b[39;00mlabels\u001b[39m.\u001b[39mtolist()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     25\u001b[0m     )\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
