--- a/train.ipynb
+++ b/train.ipynb
@@ -22,7 +22,8 @@
     "import numpy as np\n",
     "from transformers import AutoTokenizer\n",
     "\n",
-    "from models.bert import BERTClassification"
+    "from models.bert import BERTClassification\n",
+    "from models.attention import SimpleAttention"
    ]
   },
   {
@@ -90,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = BERTClassification(num_class=NUM_CLASS).to(DEVICE)\n",
+    "model = SimpleAttention(num_class=NUM_CLASS, vocab_size=len(tokenizer)).to(DEVICE)\n",
     "criterion = nn.CrossEntropyLoss(reduction=\"sum\")  # to get average easily\n",
     "optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)"
    ]
@@ -105,10 +106,39 @@
      "output_type": "stream",
      "text": [
       "Epoch [0/1000]\n",
-      "[Batch    1/216] Loss: 1.6311 Labels: [1, 0, 4, 3, 4, 1, 4, 2, 2, 2, 2, 2, 0, 2, 3, 3]\n",
-      "[Batch   51/216] Loss: 1.8018 Labels: [0, 0, 0, 0, 1, 2, 3, 2, 0, 0, 2, 2, 4, 1, 2, 4]\n",
-      "[Batch  101/216] Loss: 1.5987 Labels: [1, 3, 3, 1, 3, 4, 2, 1, 3, 4, 1, 1, 3, 0, 2, 2]\n",
-      "[Batch  151/216] Loss: 2.0378 Labels: [1, 3, 4, 1, 4, 0, 2, 4, 0, 3, 4, 2, 1, 0, 4, 0]\n"
+      "[Batch    1/216] Loss: 1.5872 Labels: [3, 2, 3, 3, 4, 3, 1, 0, 3, 2, 2, 0, 2, 4, 2, 0]\n",
+      "[Batch   51/216] Loss: 1.5186 Labels: [1, 1, 0, 0, 2, 3, 1, 4, 0, 2, 0, 1, 3, 4, 2, 1]\n",
+      "[Batch  101/216] Loss: 1.1880 Labels: [3, 0, 3, 2, 4, 2, 1, 1, 4, 2, 1, 1, 1, 2, 0, 2]\n",
+      "[Batch  151/216] Loss: 0.8503 Labels: [3, 1, 2, 2, 1, 4, 2, 1, 1, 2, 2, 4, 4, 2, 1, 2]\n",
+      "[Batch  201/216] Loss: 1.1127 Labels: [4, 2, 3, 3, 4, 1, 3, 4, 0, 1, 0, 0, 2, 2, 2, 3]\n",
+      "Total loss: 1.3002\n",
+      "Epoch [1/1000]\n",
+      "[Batch    1/216] Loss: 0.9325 Labels: [1, 4, 0, 3, 3, 4, 0, 2, 2, 2, 0, 4, 4, 1, 0, 2]\n",
+      "[Batch   51/216] Loss: 0.9505 Labels: [2, 3, 0, 3, 3, 4, 3, 0, 3, 4, 3, 3, 2, 2, 4, 2]\n",
+      "[Batch  101/216] Loss: 0.9808 Labels: [4, 2, 1, 2, 4, 2, 1, 2, 2, 2, 4, 4, 2, 4, 3, 3]\n",
+      "[Batch  151/216] Loss: 0.4852 Labels: [2, 4, 1, 1, 2, 1, 1, 2, 1, 3, 1, 0, 2, 4, 1, 3]\n",
+      "[Batch  201/216] Loss: 1.3344 Labels: [1, 0, 1, 4, 2, 4, 3, 1, 4, 1, 1, 1, 3, 0, 3, 2]\n",
+      "Epoch [2/1000]\n",
+      "[Batch    1/216] Loss: 0.6409 Labels: [0, 3, 1, 2, 2, 4, 2, 3, 1, 1, 1, 0, 1, 4, 0, 4]\n",
+      "[Batch   51/216] Loss: 0.4835 Labels: [0, 3, 4, 4, 4, 4, 3, 2, 0, 2, 4, 1, 0, 4, 3, 4]\n",
+      "[Batch  101/216] Loss: 0.4227 Labels: [4, 2, 3, 2, 2, 4, 3, 0, 1, 2, 1, 3, 4, 2, 4, 1]\n",
+      "[Batch  151/216] Loss: 0.6300 Labels: [1, 2, 1, 2, 0, 4, 0, 3, 3, 4, 2, 2, 4, 3, 1, 1]\n",
+      "[Batch  201/216] Loss: 0.8847 Labels: [0, 1, 1, 0, 3, 3, 1, 0, 1, 1, 2, 1, 3, 2, 2, 2]\n",
+      "Epoch [3/1000]\n",
+      "[Batch    1/216] Loss: 0.3372 Labels: [2, 1, 2, 2, 2, 4, 4, 1, 0, 2, 2, 3, 1, 4, 2, 4]\n",
+      "[Batch   51/216] Loss: 0.1862 Labels: [0, 2, 1, 1, 3, 1, 4, 1, 4, 0, 2, 1, 0, 4, 2, 4]\n",
+      "[Batch  101/216] Loss: 0.1689 Labels: [0, 1, 3, 2, 2, 2, 0, 2, 1, 1, 2, 1, 3, 2, 0, 1]\n",
+      "[Batch  151/216] Loss: 0.7740 Labels: [0, 3, 2, 4, 1, 2, 4, 3, 0, 3, 4, 4, 1, 4, 0, 1]\n",
+      "[Batch  201/216] Loss: 0.2165 Labels: [1, 0, 2, 1, 1, 3, 1, 1, 3, 2, 4, 4, 1, 4, 3, 3]\n",
+      "Epoch [4/1000]\n",
+      "[Batch    1/216] Loss: 0.1517 Labels: [0, 2, 1, 4, 0, 3, 2, 4, 1, 3, 4, 2, 1, 1, 1, 2]\n",
+      "[Batch   51/216] Loss: 0.1528 Labels: [0, 4, 0, 1, 0, 3, 0, 4, 4, 1, 3, 0, 0, 1, 4, 2]\n",
+      "[Batch  101/216] Loss: 0.0431 Labels: [2, 1, 1, 3, 1, 3, 2, 1, 2, 3, 4, 2, 1, 4, 3, 2]\n",
+      "[Batch  151/216] Loss: 0.1201 Labels: [4, 1, 0, 2, 1, 3, 1, 1, 4, 2, 0, 1, 2, 2, 2, 2]\n",
+      "[Batch  201/216] Loss: 0.2122 Labels: [1, 4, 2, 1, 2, 2, 2, 2, 3, 3, 2, 2, 4, 3, 0, 4]\n",
+      "Epoch [5/1000]\n",
+      "[Batch    1/216] Loss: 0.1244 Labels: [0, 0, 2, 1, 1, 4, 4, 4, 2, 1, 2, 3, 1, 0, 2, 3]\n",
+      "[Batch   51/216] Loss: 0.0189 Labels: [2, 1, 0, 0, 3, 4, 3, 4, 4, 2, 1, 1, 1, 2, 3, 4]\n"
      ]
     },
     {
@@ -134,7 +164,7 @@
     "    for batch_idx, (sentences, labels) in enumerate(data_loader):\n",
     "        inputs = tokenizer(sentences, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
     "        labels = torch.LongTensor(labels).to(DEVICE)\n",
-    "\n",
+    "        \n",
     "        outputs = model(**inputs)\n",
     "        loss = criterion(outputs, labels)\n",
     "\n",
