--- a/train.ipynb
+++ b/train.ipynb
@@ -28,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "class TextDataset(Dataset):\n",
     "    def __init__(self, df_path):\n",
+    "        super().__init__()\n",
     "        self.df = pd.read_csv(df_path, index_col=0)\n",
     "\n",
     "    def __len__(self):\n",
