--- a/util/prepare_dataset.ipynb
+++ b/util/prepare_dataset.ipynb
@@ -3101,12 +3101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_df = train_df.reset_index(drop=True)\n",
     "train_df.to_csv(DATA_ROOT / \"train.csv\")\n",
+    "val_df = val_df.reset_index(drop=True)\n",
     "val_df.to_csv(DATA_ROOT / \"val.csv\")\n",
+    "test_df = test_df.reset_index(drop=True)\n",
     "test_df.to_csv(DATA_ROOT / \"test.csv\")"
    ]
   }
