--- a/train.ipynb
+++ b/train.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,10 +61,10 @@
     "LEARNING_RATE = 3e-4\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "BATCH_SIZE = 16\n",
-    "NUM_EPOCHS = 1000\n",
+    "NUM_EPOCHS = 3\n",
     "NUM_WORKERS = 2\n",
     "LOAD_FROM = None\n",
-    "DATA_ROOT = r\"util/jlpt_sentences.csv\"\n",
+    "DATA_ROOT = r\"training_data/train.csv\"\n",
     "NUM_CLASS = 5\n",
     "EXP_FOLDER = \"exp4\""
    ]
@@ -105,51 +105,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [0/1000]\n",
-      "[Batch    1/216] Loss: 1.5872 Labels: [3, 2, 3, 3, 4, 3, 1, 0, 3, 2, 2, 0, 2, 4, 2, 0]\n",
-      "[Batch   51/216] Loss: 1.5186 Labels: [1, 1, 0, 0, 2, 3, 1, 4, 0, 2, 0, 1, 3, 4, 2, 1]\n",
-      "[Batch  101/216] Loss: 1.1880 Labels: [3, 0, 3, 2, 4, 2, 1, 1, 4, 2, 1, 1, 1, 2, 0, 2]\n",
-      "[Batch  151/216] Loss: 0.8503 Labels: [3, 1, 2, 2, 1, 4, 2, 1, 1, 2, 2, 4, 4, 2, 1, 2]\n",
-      "[Batch  201/216] Loss: 1.1127 Labels: [4, 2, 3, 3, 4, 1, 3, 4, 0, 1, 0, 0, 2, 2, 2, 3]\n",
-      "Total loss: 1.3002\n",
-      "Epoch [1/1000]\n",
-      "[Batch    1/216] Loss: 0.9325 Labels: [1, 4, 0, 3, 3, 4, 0, 2, 2, 2, 0, 4, 4, 1, 0, 2]\n",
-      "[Batch   51/216] Loss: 0.9505 Labels: [2, 3, 0, 3, 3, 4, 3, 0, 3, 4, 3, 3, 2, 2, 4, 2]\n",
-      "[Batch  101/216] Loss: 0.9808 Labels: [4, 2, 1, 2, 4, 2, 1, 2, 2, 2, 4, 4, 2, 4, 3, 3]\n",
-      "[Batch  151/216] Loss: 0.4852 Labels: [2, 4, 1, 1, 2, 1, 1, 2, 1, 3, 1, 0, 2, 4, 1, 3]\n",
-      "[Batch  201/216] Loss: 1.3344 Labels: [1, 0, 1, 4, 2, 4, 3, 1, 4, 1, 1, 1, 3, 0, 3, 2]\n",
-      "Epoch [2/1000]\n",
-      "[Batch    1/216] Loss: 0.6409 Labels: [0, 3, 1, 2, 2, 4, 2, 3, 1, 1, 1, 0, 1, 4, 0, 4]\n",
-      "[Batch   51/216] Loss: 0.4835 Labels: [0, 3, 4, 4, 4, 4, 3, 2, 0, 2, 4, 1, 0, 4, 3, 4]\n",
-      "[Batch  101/216] Loss: 0.4227 Labels: [4, 2, 3, 2, 2, 4, 3, 0, 1, 2, 1, 3, 4, 2, 4, 1]\n",
-      "[Batch  151/216] Loss: 0.6300 Labels: [1, 2, 1, 2, 0, 4, 0, 3, 3, 4, 2, 2, 4, 3, 1, 1]\n",
-      "[Batch  201/216] Loss: 0.8847 Labels: [0, 1, 1, 0, 3, 3, 1, 0, 1, 1, 2, 1, 3, 2, 2, 2]\n",
-      "Epoch [3/1000]\n",
-      "[Batch    1/216] Loss: 0.3372 Labels: [2, 1, 2, 2, 2, 4, 4, 1, 0, 2, 2, 3, 1, 4, 2, 4]\n",
-      "[Batch   51/216] Loss: 0.1862 Labels: [0, 2, 1, 1, 3, 1, 4, 1, 4, 0, 2, 1, 0, 4, 2, 4]\n",
-      "[Batch  101/216] Loss: 0.1689 Labels: [0, 1, 3, 2, 2, 2, 0, 2, 1, 1, 2, 1, 3, 2, 0, 1]\n",
-      "[Batch  151/216] Loss: 0.7740 Labels: [0, 3, 2, 4, 1, 2, 4, 3, 0, 3, 4, 4, 1, 4, 0, 1]\n",
-      "[Batch  201/216] Loss: 0.2165 Labels: [1, 0, 2, 1, 1, 3, 1, 1, 3, 2, 4, 4, 1, 4, 3, 3]\n",
-      "Epoch [4/1000]\n",
-      "[Batch    1/216] Loss: 0.1517 Labels: [0, 2, 1, 4, 0, 3, 2, 4, 1, 3, 4, 2, 1, 1, 1, 2]\n",
-      "[Batch   51/216] Loss: 0.1528 Labels: [0, 4, 0, 1, 0, 3, 0, 4, 4, 1, 3, 0, 0, 1, 4, 2]\n",
-      "[Batch  101/216] Loss: 0.0431 Labels: [2, 1, 1, 3, 1, 3, 2, 1, 2, 3, 4, 2, 1, 4, 3, 2]\n",
-      "[Batch  151/216] Loss: 0.1201 Labels: [4, 1, 0, 2, 1, 3, 1, 1, 4, 2, 0, 1, 2, 2, 2, 2]\n",
-      "[Batch  201/216] Loss: 0.2122 Labels: [1, 4, 2, 1, 2, 2, 2, 2, 3, 3, 2, 2, 4, 3, 0, 4]\n",
-      "Epoch [5/1000]\n",
-      "[Batch    1/216] Loss: 0.1244 Labels: [0, 0, 2, 1, 1, 4, 4, 4, 2, 1, 2, 3, 1, 0, 2, 3]\n",
-      "[Batch   51/216] Loss: 0.0189 Labels: [2, 1, 0, 0, 3, 4, 3, 4, 4, 2, 1, 1, 1, 2, 3, 4]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     17\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m---> 19\u001b[0m total_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m loss\u001b[39m.\u001b[39;49mitem()\n\u001b[1;32m     20\u001b[0m \u001b[39mif\u001b[39;00m batch_idx \u001b[39m%\u001b[39m \u001b[39m50\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     21\u001b[0m     \u001b[39mprint\u001b[39m(\n\u001b[1;32m     22\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m[Batch \u001b[39m\u001b[39m{\u001b[39;00mbatch_idx\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\u001b[39m:\u001b[39;00m\u001b[39m4d\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data_loader)\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     23\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m Loss: \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m.\u001b[39mitem()\u001b[39m/\u001b[39mBATCH_SIZE\u001b[39m:\u001b[39;00m\u001b[39m.4f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     24\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m Labels: \u001b[39m\u001b[39m{\u001b[39;00mlabels\u001b[39m.\u001b[39mtolist()\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     25\u001b[0m     )\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch [0/3]\n",
+      "[Batch    1/130] Loss: 1.6061 Labels: [2, 2, 4, 1, 4, 0, 4, 2, 3, 3, 2, 2, 3, 3, 3, 2]\n",
+      "[Batch   51/130] Loss: 1.3689 Labels: [3, 1, 0, 3, 2, 2, 2, 4, 2, 1, 1, 4, 2, 4, 1, 2]\n",
+      "[Batch  101/130] Loss: 1.2640 Labels: [2, 4, 2, 0, 2, 2, 2, 1, 3, 3, 2, 3, 3, 3, 3, 3]\n",
+      "Total loss: 1.3171\n",
+      "Epoch [1/3]\n",
+      "[Batch    1/130] Loss: 1.0874 Labels: [2, 2, 4, 2, 1, 3, 0, 0, 4, 3, 2, 1, 2, 1, 2, 0]\n",
+      "[Batch   51/130] Loss: 0.6830 Labels: [0, 4, 4, 3, 4, 4, 2, 1, 3, 1, 2, 4, 2, 2, 1, 2]\n",
+      "[Batch  101/130] Loss: 1.0881 Labels: [0, 2, 2, 4, 3, 2, 0, 3, 2, 4, 3, 0, 0, 3, 3, 1]\n",
+      "Epoch [2/3]\n",
+      "[Batch    1/130] Loss: 0.6145 Labels: [1, 1, 0, 2, 0, 3, 0, 4, 2, 3, 0, 2, 1, 4, 2, 4]\n",
+      "[Batch   51/130] Loss: 0.5474 Labels: [2, 3, 2, 2, 0, 1, 0, 3, 4, 0, 4, 3, 2, 4, 2, 1]\n",
+      "[Batch  101/130] Loss: 0.5072 Labels: [2, 1, 2, 0, 3, 2, 2, 2, 0, 0, 0, 3, 1, 1, 3, 4]\n"
      ]
     }
    ],
@@ -185,9 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nEpoch    1| Loss: 1.6502\\nEpoch   51| Loss: 0.5745\\nEpoch  101| Loss: 0.2626\\nEpoch  151| Loss: 0.1694\\nEpoch  201| Loss: 0.1005\\nEpoch  251| Loss: 0.0651\\nEpoch  301| Loss: 0.0441\\n'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Epoch    1| Loss: 1.6502\n",
@@ -202,10 +181,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m tokens_list \u001b[39m=\u001b[39m [tokenizer\u001b[39m.\u001b[39mconvert_ids_to_tokens(ids) \u001b[39mfor\u001b[39;00m ids \u001b[39min\u001b[39;00m inputs[\u001b[39m\"\u001b[39m\u001b[39minput_ids\u001b[39m\u001b[39m\"\u001b[39m]]\n\u001b[1;32m      5\u001b[0m model\u001b[39m.\u001b[39meval()\n\u001b[0;32m----> 6\u001b[0m _, attention \u001b[39m=\u001b[39m model(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39minputs)\n\u001b[1;32m      7\u001b[0m cls_attn \u001b[39m=\u001b[39m attention[:, \u001b[39m0\u001b[39m, :]\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(attention\u001b[39m.\u001b[39mshape)\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "batch_idx, (sentences, labels) = next(enumerate(data_loader))\n",
+    "inputs = tokenizer(sentences, return_tensors=\"pt\", padding=True).to(DEVICE)\n",
+    "tokens_list = [tokenizer.convert_ids_to_tokens(ids) for ids in inputs[\"input_ids\"]]\n",
+    "\n",
+    "model.eval()\n",
+    "_, attention = model.get_attention_output(**inputs)\n",
+    "cls_attn = attention[:, 0, :]\n",
+    "print(attention.shape)\n",
+    "print(cls_attn.sum())\n",
+    "\n",
+    "for tokens, attn in zip(tokens_list, cls_attn):\n",
+    "    for t in tokens:\n",
+    "        print(f\"{t:>15}\", end=\"\")\n",
+    "    print()\n",
+    "    for a in attn.tolist():\n",
+    "        print(f\"{a:15.4f}\", end=\"\")\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
